<resources>
    <string name="app_name">SeguradoraCo</string>
    <string name="confirmar">Confirmar</string>
    <string name="excluir">Excluir</string>
    <string name="carros">Carros</string>
    <string name="title_activity_ndr_teste">NDrTesteActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="comunicao">Comunicação</string>
    <string name="enviar_feedback">Enviar Feedback</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="procurar_carro">Procurar Carro</string>
    <string name="tools">Tools</string>
    <string name="gallery">Gallery</string>
    <string name="galeria">Galeria</string>
    <string name="configura_o">Configuração</string>
    <string name="mapa">Mapa</string>
    <string name="op_es">Opções</string>
    <string name="opcoes">Opções</string>
    <string name="calendario">Calendário</string>
</resources>
