<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/apSearchCarro"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/procurar_carro" />
    <item
        android:id="@+id/navMapa"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/mapa" />

    <item android:title="@string/configura_o">
        <menu>
            <item
                android:id="@+id/navOpcoes"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/opcoes" />

        </menu>

    </item>

    <item android:title="@string/comunicao">
        <menu>
            <item
                android:id="@+id/navCompartilhar"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/compartilhar" />
            <item
                android:id="@+id/navEnviarFeedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/enviar_feedback" />
        </menu>
    </item>

</menu>
