<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.root.seguradoraco.view.MainActivity">

    <LinearLayout
        android:id="@+id/LinearLayoutTituloLista"
        android:layout_width="368dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTituloLista"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/carros"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rlListaCarros"
        android:layout_width="match_parent"
        android:layout_height="391dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="63dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/LinearLayoutLista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtListaPlaca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="61dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TableRow
                android:id="@+id/trCarroLista"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="20dp">

                <TextView
                    android:id="@+id/txtListaMarcaModelo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:gravity="top"
                    android:maxLines="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    app:layout_constraintEnd_toStartOf="@+id/txtListaQtdEventos"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtListaPlaca" />

                <TextView
                    android:id="@+id/txtListaQtdEventos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    app:layout_constraintBaseline_toBaselineOf="@+id/txtListaMarcaModelo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/txtListaMarcaModelo" />
            </TableRow>
        </LinearLayout>
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/LinearLayoutBotoes"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintBottom_toBottomOf="parent">


        <Button
            android:id="@+id/btnConfirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirmar" />

        <Button
            android:id="@+id/btnExcluir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/excluir" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabNovoCarro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add" />

</android.support.constraint.ConstraintLayout>